--- a/index.html
+++ b/index.html
@@ -16,19 +16,52 @@ Color:
 	<br>
 	<br>
 
-
 	<canvas id="myCanvas" width="100" height="100"></canvas>
+	<canvas id="myCanvas" width="100" height="100"></canvas>
+	<canvas id="myCanvas" width="100" height="100"></canvas>
+	<canvas id="myCanvas" width="100" height="100"></canvas>
+	<canvas id="myCanvas" width="100" height="100"></canvas>
+	<canvas id="myCanvas" width="100" height="100"></canvas>
+	<canvas id="myCanvas" width="100" height="100"></canvas>
+	<canvas id="myCanvas" width="100" height="100"></canvas>
+	<canvas id="myCanvas" width="100" height="100"></canvas>
+	<canvas id="myCanvas" width="100" height="100"></canvas>
+	<canvas id="myCanvas" width="100" height="100"></canvas>
+	<canvas id="myCanvas" width="100" height="100"></canvas>
+	<canvas id="myCanvas" width="100" height="100"></canvas>
+	<canvas id="myCanvas" width="100" height="100"></canvas>
+	<canvas id="myCanvas" width="100" height="100"></canvas>
+	<canvas id="myCanvas" width="100" height="100"></canvas>
+
+<div class="display">
+
+	</div>
+	
+
+
+
+
+
+
 	<br>
 	<br>
+
+
+
+	<div>
+		
+
+	</div>
 
 
 	
 </body>
 
-<script src="app.js"></script>
-<script src="jscolor.js"></script>
 <script
   src="http://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
+<script src="app.js"></script>
+<script src="jscolor.js"></script>
+
 </html>
